--- a/src/bootstrapper/less/theme.less
+++ b/src/bootstrapper/less/theme.less
@@ -329,7 +329,7 @@
 
 
 //
-// Tables
+// Responsive tables
 // --------------------------------------------------
 .table {
   tr {
@@ -362,4 +362,52 @@
 }
 .panel-default > .panel-heading {
   border-radius: 0;
+}
+
+
+//
+// Tables
+// --------------------------------------------------
+
+.table-superb {
+  .table th {
+    font-size: @font-size-base - 2;
+  }
+
+  @media only screen and (max-width: @screen-lg) {
+    .table,
+    .table tbody,
+    .table tr,
+    .table td { display: block; word-wrap: break-word; }
+    .table thead { display: none; }
+    .table tr:first-child {
+        border-top: 1px solid #e2e2e2;
+    }
+    .table tr {
+        padding:0 0 0 130px;
+        border-bottom: 1px solid #e2e2e2;
+    }
+    .table tr:after {
+      content: '';
+      display: table;
+      clear: both;
+    }
+    .table td {
+      border-top: none;
+      float:left;
+      .box-sizing(border-box);
+      width:100%;
+      padding:7px 5px;
+    }
+    .table td:before {
+      content: attr(title);
+      position: relative;
+      float: left;
+      font-size: @font-size-base - 2;
+      font-weight: bold;
+      width: 138;
+      margin: 0 0 0 -135px;
+      padding: 0 5px;
+    }
+  }
 }
