switched template variable

--- a/src/fabric_interface/templates/fabric_interface/users/user_confirm_delete.html
+++ b/src/fabric_interface/templates/fabric_interface/users/user_confirm_delete.html
@@ -17,7 +17,7 @@
 {% endblock %}
 
 {% block content %}
-    <h4>{% trans "Delete user" %} '{{ user }}'</h4>
+    <h4>{% trans "Delete user" %} '{{ object }}'</h4>
     <hr />
     <h3>Are you sure? There's no going back!</h3>
     <form method="post" role="form">
