updated configuration detail

--- a/src/bootstrapper/less/theme.less
+++ b/src/bootstrapper/less/theme.less
@@ -370,6 +370,8 @@
 // --------------------------------------------------
 
 .table-superb {
+  margin: 0 -10px;
+
   .table th {
     font-size: @font-size-base - 2;
   }
@@ -411,3 +413,8 @@
     }
   }
 }
+
+
+//
+// Panels
+// --------------------------------------------------
