--- a/src/fabric_interface/projects/templates/projects/project_detail.html
+++ b/src/fabric_interface/projects/templates/projects/project_detail.html
@@ -34,6 +34,13 @@
                     <span class="nav-header">{% trans "Configurations" %}</span>
                 </div>
                 <div class="panel-body">
+                    <p class="small">
+                        {% blocktrans %}
+                            Configurations below will be available within formulae using the env prefix and can be
+                            overwritten by a stage configuration, e.g.
+                        {% endblocktrans %}
+                        <pre class="small">{% verbatim %}DEBUG = {{ env.DEBUG }}{% endverbatim %}</pre>
+                    </p>
                     {% if configurations %}
                         {% render_table configurations %}
                     {% else %}
