--- a/src/bootstrapper/less/theme.less
+++ b/src/bootstrapper/less/theme.less
@@ -363,6 +363,13 @@
 .panel-default > .panel-heading {
   border-radius: 0;
 }
+.alert {
+  border-radius: 0;
+}
+pre {
+  border-radius: 0;
+  margin: 0;
+}
 
 
 //
@@ -370,7 +377,7 @@
 // --------------------------------------------------
 
 .table-superb {
-  margin: 0 -10px;
+  margin: 0 -15px;
 
   .table th {
     font-size: @font-size-base - 2;
@@ -413,8 +420,3 @@
     }
   }
 }
-
-
-//
-// Panels
-// --------------------------------------------------
