--- a/src/fabric_interface/projects/templates/projects/project_detail.html
+++ b/src/fabric_interface/projects/templates/projects/project_detail.html
@@ -35,13 +35,15 @@
                 </div>
                 <div class="panel-body">
                     {% if DEMO %}
-                    <p class="small">
-                        {% blocktrans %}
-                            Configurations below will be available within formulae using the env prefix and can be
-                            overwritten by a stage configuration, e.g.
-                        {% endblocktrans %}
-                        <pre class="small">{% verbatim %}DEBUG = {{ env.DEBUG }}{% endverbatim %}</pre>
-                    </p>
+                        <div class="alert alert-info">
+                            <p class="small">
+                                {% blocktrans %}
+                                    Configurations below will be available within formulae using the env prefix and can be
+                                    overwritten by a stage configuration, e.g.
+                                {% endblocktrans %}
+                            </p><br/>
+                            <pre class="small">{% verbatim %}DEBUG = {{ env.DEBUG }}{% endverbatim %}</pre>
+                        </div>
                     {% endif %}
                     {% if configurations %}
                         {% render_table configurations %}
