--- a/src/fabric_interface/projects/templates/projects/project_detail.html
+++ b/src/fabric_interface/projects/templates/projects/project_detail.html
@@ -42,7 +42,7 @@
                                     overwritten by a stage configuration, e.g.
                                 {% endblocktrans %}
                             </p><br/>
-                            <pre class="small">{% verbatim %}DEBUG = {{ env.DEBUG }}{% endverbatim %}</pre>
+                            <pre class="glassy small">{% verbatim %}DEBUG = {{ env.DEBUG }}{% endverbatim %}</pre>
                         </div>
                     {% endif %}
                     {% if configurations %}
