--- a/src/bootstrapper/less/theme.less
+++ b/src/bootstrapper/less/theme.less
@@ -366,6 +366,11 @@
 .alert {
   border-radius: 0;
 }
+.alert-demo {
+  border: 0;
+  margin: -15px -15px 20px;
+}
+
 pre {
   border-radius: 0;
   margin: 0;
@@ -381,7 +386,6 @@ pre {
 // --------------------------------------------------
 
 .table-superb {
-  margin: 0 -15px;
 
   .table th {
     font-size: @font-size-base - 2;
