--- a/src/fabric_interface/projects/templates/projects/project_detail.html
+++ b/src/fabric_interface/projects/templates/projects/project_detail.html
@@ -35,7 +35,7 @@
                 </div>
                 <div class="panel-body">
                     {% if DEMO %}
-                        <div class="alert alert-info">
+                        <div class="alert alert-info alert-demo">
                             <p class="small">
                                 {% blocktrans %}
                                     Configurations below will be available within formulae using the env prefix and can be
