--- a/src/fabric_interface/projects/templates/projects/project_detail.html
+++ b/src/fabric_interface/projects/templates/projects/project_detail.html
@@ -23,7 +23,11 @@
     <div class="row">
         <div class="col-md-12">
             <div class="well well-sm">
-                {{ object }} SLUG={{ object.slug }}
+                {% if object.fabfile %}
+                    Fabfile: {{ object.fabfile }}
+                {% else %}
+                    <strong>{% trans "Nothing to do, please select a fabfile." %}</strong>
+                {% endif %}
             </div>
         </div>
     </div>
