--- a/src/fabric_interface/formulae/templates/formulae/fabfile_detail.html
+++ b/src/fabric_interface/formulae/templates/formulae/fabfile_detail.html
@@ -5,12 +5,17 @@
 {% block title %}{{ title }}{% endblock %}
 
 {% block content %}
-    <h4>{% trans "View" %} {% trans "fabfile" %} '{{ object.family }}'</h4>
+    <h4>{% trans "View" %} {% if not object.parent %}{% trans "fabfile" %}{% else %}{% trans "particle" %}{% endif %} '{{ object.family }}'</h4>
     <hr />
+    {% if object.formula %}
+        {{ object.formula.prettified_code }}
+        <a href="{% url 'formula_update' slug=object.formula.slug %}">{% trans "Edit formula" %}</a>
+    {% endif %}
     <ul>
         {% recursetree object.get_children %}
-            <li><a href="{% url 'fabfile_update' pk=node.pk %}">{{ node }}</a>
+            <li>
                 {{ node.formula.prettified_code }}
+                <a href="{% url 'formula_update' slug=node.formula.slug %}">{% trans "Edit formula" %}</a>
                 {% if not node.is_leaf_node %}
                     <ul>
                         {{ children }}
